# junit2json-rs

./: Cargo.toml  README.md  renovate.json
.devcontainer/: devcontainer.json  setup-tools.sh
.github/workflows/: ci.yml  release.yml
src/: lib.rs
tests/snapshots/: snapshot__fixtures_snapshot@cargo-nextest.xml.snap  snapshot__fixtures_snapshot@nunit-failure.xml.snap
