[package]
name = "junit2json"
version = "0.2.13"
edition = "2021"
authors = ["Kenta Kase <kesin1202000@gmail.com>"]
license = "MIT"
description = "A tool convert JUnit XML format to JSON with Rust"
repository = "https://github.com/Kesin11/junit2json-rs"
homepage = "https://github.com/Kesin11/junit2json-rs"
keywords = ["junit"]
categories = ["development-tools::testing"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
serde_with = "3.16.1"
quick-xml = { version = "0.38.4", features = ["serialize", "serde-types"] }
clap = { version = "4.5.53", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
insta = { version = "1.44.3", features = ["json", "glob"] }

[package.metadata.release]
pre-release-commit-message = "[skip ci]: Release {{crate_name}} version {{version}}"
